NetconfSessionPreferences is a record
Make this class a record, as it is just a simple holder. Mutators are
still confusing, we will deal with that later.

Change-Id: I72bea3729591b46167c025d62b0c6f91ef04c810
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>